<?xml version="1.0"?>
<package format="3">
  <name>uuv_manipulators_kinematics</name>
  <version>0.6.1</version>
  <description>Implementation of interfaces to operate manipulators and grippers along with kinematics solver services.</description>

  <maintainer email="LuizRicardo.Douat@de.bosch.com">Luiz Ricardo Douat</maintainer>
  <maintainer email="Musa.Marcusso@de.bosch.com">Musa Morena Marcusso Manhaes</maintainer>
  <maintainer email="Sebastian.Scherer2@de.bosch.com">Sebastian Scherer</maintainer>

  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>gazebo_ros</depend>
  <depend>control_toolbox</depend>
  <depend>rospy</depend>
  <depend condition="$ROS_DISTRO != noetic">orocos_kdl</depend>
  <depend condition="$ROS_DISTRO == noetic">liborocos-kdl-dev</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-numpy</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-lxml</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-lxml</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-yaml</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-yaml</depend>
  <depend>uuv_manipulators_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf</depend>
  <depend>urdfdom_py</depend>
  <depend>kdl_parser_py</depend>

  <test_depend>rosunit</test_depend>
  <test_depend>rostest</test_depend>
</package>
