<?xml version="1.0"?>
<package format="2">
  <name>oberon7_gazebo</name>
  <version>1.2.7</version>
  <description>
      Gazebo wrapper for the oberon7 robot arms.
  </description>


  <author>Carson Vogt</author>
  <maintainer email="crvogt26@gmail.com">Carson Vogt</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.org/wiki/ur_gazebo</url>

  <buildtool_depend>catkin</buildtool_depend>
  <test_depend>roslaunch</test_depend>
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>gazebo_ros_control</exec_depend>
  <exec_depend>joint_state_controller</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rostopic</exec_depend>
  <exec_depend>oberon7_description</exec_depend>

  <export>
  </export>
</package>
